Le quité la clase white al form en el index

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           </ul>
         </div>
         <div class="col-md-3 mx-auto">
-          <form class="white">
+          <form>
             <h5>Suscribite a mi newsletter</h5>
             <p>Y enterate de todas las novedades</p>
             <div class="d-flex w-100 gap-2">
