Cambio de imágenes en Tienda, centrado de form signup y contacto, achicar footer en index

--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
   </section>
 
   <div class="container-fluid">
-    <footer class="py-5 footer footer--grad">
+    <footer class="py-1 footer footer--grad">
       <div class="row ">
-        <div class="col-md-2 mx-auto">
+        <div class="col-md-2 mx-auto col-centered">
           <ul class="nav flex-row">
             <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="Twitter">
                   <use xlink:href="#twitter" />
@@ -240,12 +240,12 @@
             <li class="nav-item mb-2"><a href="./pages/contacto.html" class="nav-link p-0">Contacto</a></li>
             <li class="nav-item mb-2"><a href="./pages/terms.html" class="nav-link p-0">Términos & condiciones</a>
             </li>
+            
           </ul>
         </div>
         <div class="col-md-3 mx-auto">
           <form>
-            <h5>Suscribite a mi newsletter</h5>
-            <p>Y enterate de todas las novedades</p>
+            <p>Suscribite a mi newsletter!</p>
             <div class="d-flex w-100 gap-2">
               <label for="newsletter1" class="visually-hidden">Email</label>
               <input id="newsletter1" type="text" class="form-control" placeholder="Email">
