--- a/pages/signup.html
+++ b/pages/signup.html
@@ -113,9 +113,9 @@
   <main>
     <p class="section--subtitle">Registrar usuario</p>
 
-
+    <div class="center">
     <div>
-      <form class="col-sm-4"">
+      <form class="col-sm-12 bigForm">
               <div class=" form-group">
         <label for="exampleFormControlInput1">Nombre:</label>
         <input type="email" class="form-control" id="exampleFormControlInput1">
@@ -147,6 +147,7 @@
     </div>
 
     </div>
+  </div>
   </main>
   <div class="container-fluid">
     <footer class="py-5 footer footer--grad">
