--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -111,37 +111,39 @@
   </nav>
 </header>
 <main class="container-fluid">
-  <p class="section--subtitle">Contacto </p>
-  <p> Hola, soy Noe! Te invito a que me dejes tus comentarios, consultas o inquietudes que será un gusto
-    responderte.</p>
-  <div>
-    <form class="col-sm-4"">
-                <div class=" form-group">
-      <label for="exampleFormControlInput1">Nombre:</label>
-      <input type="email" class="form-control" id="exampleFormControlInput1">
-      <label for="exampleFormControlInput1">Apellido:</label>
-      <input type="email" class="form-control" id="exampleFormControlInput1">
-      <label for="exampleFormControlInput1">Correo electrónico:</label>
-      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="abc@123.com">
-  </div>
+  <div class="center">
+    <p class="section--subtitle">Contacto </p>
+    <p> Hola, soy Noe! Te invito a que me dejes tus comentarios, consultas o inquietudes que será un gusto
+      responderte.</p>
+    <div>
+      <form class="col-sm-12 bigForm">
+        <div class=" form-group">
+          <label for="exampleFormControlInput1">Nombre:</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1">
+          <label for="exampleFormControlInput1">Apellido:</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1">
+          <label for="exampleFormControlInput1">Correo electrónico:</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="abc@123.com">
+        </div>
 
-  <div class="form-group">
-    <label for="exampleFormControlSelect2">País</label>
-    <select class="form-control">
-      <option>Uruguay</option>
-      <option>Argentina</option>
-      <option>Brasil</option>
-      <option>Chile</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlTextarea1">Comentarios</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-  </div>
-  </form>
-  <div class="col-sm-10">
-    <button type="submit" class="btn btn-primary">Enviar</button>
-  </div>
+        <div class="form-group">
+          <label for="exampleFormControlSelect2">País</label>
+          <select class="form-control">
+            <option>Uruguay</option>
+            <option>Argentina</option>
+            <option>Brasil</option>
+            <option>Chile</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Comentarios</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+      </form>
+      <div class="col-sm-12">
+        <button type="submit" class="btn btn-primary">Enviar</button>
+      </div>
+    </div>
   </div>
 </main>
 <div class="container-fluid">
