--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -119,6 +119,7 @@
       <!--Section: Content-->
       <section class="text-center">
         <div class="row">
+
           <div class="col-lg-4 col-md-12 mb-4">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
@@ -140,11 +141,11 @@
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                 <img class="img-fluid"
-                  src="http://d3ugyf2ht6aenh.cloudfront.net/stores/123/189/products/recipe-tapa-web1-1dae9f333ad7ec916e16298380329489-640-0.jpg"
+                  src="../img/libro.jpg"
                   alt="libro" height="400" " />
                     </div>
                     <div class=" card-body">
-                <h5 class="card-title">Libro</h5>
+                <h5 class="card-title">Mi libro de recetas</h5>
                 <p class="card-text">
                   $1100
                 </p>
@@ -152,6 +153,25 @@
               </div>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card">
+              <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+                <img class="img-fluid"
+                  src="../img/curso.jpg"
+                  alt="saludable" height="400" " />
+                    </div>
+                    <div class=" card-body">
+                <h5 class="card-title">Curso online de comida saludable</h5>
+                <p class="card-text">
+                  $1300
+                </p>
+                <button class="btn btn-primary--buy" type="button">Comprar</button>
+              </div>
+            </div>
+          </div>
+        
+        
         </div>
     </div>
     </section>
