Cambié el footer en el resto de las pages, cambié posición de botón Enviar en formularios, alineé los links del menú en el centro del nav, agregué más texto en sección Bienvenida

--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
               <a class="nav-link dropdown-toggle" href="#" id="dropdown07XL" data-bs-toggle="dropdown"
                 aria-expanded="false">Recetas</a>
               <ul class="dropdown-menu" aria-labelledby="dropdown07XL">
-                <li><a class="dropdown-item dropdown-item--style" href="./pages/rececetas-dulces.html">Recetas Dulces</a>
+                <li><a class="dropdown-item dropdown-item--style" href="./pages/rececetas-dulces.html">Recetas
+                    Dulces</a>
                 </li>
                 <div class="dropdown-divider"></div>
-                <li><a class="dropdown-item dropdown-item--style" href="./pages/recetas-saladas.html">Recetas Saladas</a>
+                <li><a class="dropdown-item dropdown-item--style" href="./pages/recetas-saladas.html">Recetas
+                    Saladas</a>
                 </li>
                 <div class="dropdown-divider"></div>
                 <li><a class="dropdown-item dropdown-item--style" href="./pages/recetas-vegetarianas.html">Recetas
@@ -115,9 +117,19 @@
   </header>
   <section class="section">
     <p class="section--welcome"> ¡Bienvenidos!</p>
-    <p class="section--intro">
-      Soy Noe y les quiero compartir mis deliciosas recetas.
+<div class="center">
+    <p> En Las Delicias de Noe encontrarás el arte que es para mí la gastronomía.
+      Recetas tanto dulces como saladas, ideas de postres sencillos o más elaborados, platos que hemos visto siempre
+      en casa, o los clásicos totalmente renovados.
     </p>
+    <p> Porque la cocina no deja de ser un juego. Un juego que nos hace disfrutar tanto en su elaboración como después
+      cuando nos sentamos a la mesa para compartir momentos únicos.
+    </p>
+    <p> Ya lo sabemos todos, alrededor de una mesa es donde se toman las mejores decisiones. Donde nos reunimos,
+      discutimos, reímos, y nos emocionamos. Y porque a través de la comida transmitimos nuestro cariño, nuestro amor… Y
+      mucha felicidad.
+    </p>
+  </div>
   </section>
   <p class="section--subtitle">¿Qué recetas estás buscando? </p>
   </section>
@@ -221,7 +233,7 @@
   <div class="container-fluid">
     <footer class="py-1 footer footer--grad">
       <div class="row ">
-        <div class="col-md-2 mx-auto col-centered">
+        <div class="col-md-2 mx-auto">
           <ul class="nav flex-row">
             <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="Twitter">
                   <use xlink:href="#twitter" />
@@ -240,7 +252,7 @@
             <li class="nav-item mb-2"><a href="./pages/contacto.html" class="nav-link p-0">Contacto</a></li>
             <li class="nav-item mb-2"><a href="./pages/terms.html" class="nav-link p-0">Términos & condiciones</a>
             </li>
-            
+
           </ul>
         </div>
         <div class="col-md-3 mx-auto">
