--- a/pages/signup.html
+++ b/pages/signup.html
@@ -141,26 +141,25 @@
     </div>
 
     </form>
-    <div class="col-sm-10">
+    <div class="col-1 mx-auto">
       <button type="submit" class="btn btn-primary">Enviar</button>
     </div>
     </div>
-
     </div>
   </div>
   </main>
   <div class="container-fluid">
-    <footer class="py-5 footer footer--grad">
+    <footer class="py-1 footer footer--grad">
       <div class="row ">
         <div class="col-md-2 mx-auto">
           <ul class="nav flex-row">
-            <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="twitter">
+            <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="Twitter">
                   <use xlink:href="#twitter" />
                 </svg></a></li>
-            <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="twitter">
+            <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="Instagram">
                   <use xlink:href="#instagram" />
                 </svg></a></li>
-            <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="facebook">
+            <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="Facebook">
                   <use xlink:href="#facebook" />
                 </svg></a></li>
           </ul>
@@ -174,9 +173,8 @@
           </ul>
         </div>
         <div class="col-md-3 mx-auto">
-          <form class="white">
-            <h5>Suscribite a mi newsletter</h5>
-            <p>Y enterate de todas las novedades</p>
+          <form>
+            <p>Suscribite a mi newsletter!</p>
             <div class="d-flex w-100 gap-2">
               <label for="newsletter1" class="visually-hidden">Email</label>
               <input id="newsletter1" type="text" class="form-control" placeholder="Email">
