--- a/pages/terms.html
+++ b/pages/terms.html
@@ -147,17 +147,17 @@
   </main>
 
   <div class="container-fluid">
-    <footer class="py-5 footer footer--grad">
+    <footer class="py-1 footer footer--grad">
       <div class="row ">
         <div class="col-md-2 mx-auto">
           <ul class="nav flex-row">
-            <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="twitter">
+            <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="Twitter">
                   <use xlink:href="#twitter" />
                 </svg></a></li>
-            <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="instagram">
+            <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="Instagram">
                   <use xlink:href="#instagram" />
                 </svg></a></li>
-            <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="facebook">
+            <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="Facebook">
                   <use xlink:href="#facebook" />
                 </svg></a></li>
           </ul>
@@ -171,15 +171,15 @@
           </ul>
         </div>
         <div class="col-md-3 mx-auto">
-          <form class="white">
-            <h5>Suscribite a mi newsletter</h5>
-            <p>Y enterate de todas las novedades</p>
+          <form>
+            <p>Suscribite a mi newsletter!</p>
             <div class="d-flex w-100 gap-2">
               <label for="newsletter1" class="visually-hidden">Email</label>
               <input id="newsletter1" type="text" class="form-control" placeholder="Email">
               <button class="btn btn-primary" type="button">Suscribir</button>
             </div>
           </form>
+        </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
           integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
