Agregué validaciones a los campos del formulario de contacto, de registro y suscribir. Agregué envío de mail para comprar

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -116,16 +116,22 @@
     <p> Hola, soy Noe! Te invito a que me dejes tus comentarios, consultas o inquietudes que será un gusto
       responderte.</p>
     <div>
-      <form class="col-sm-12 bigForm">
-        <div class=" form-group">
-          <label for="exampleFormControlInput1">Nombre:</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1">
-          <label for="exampleFormControlInput1">Apellido:</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1">
-          <label for="exampleFormControlInput1">Correo electrónico:</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="abc@123.com">
-        </div>
 
+      <form method="POST" action="mailto:mnsu1710@gmail.com" enctype="text/plain">
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Nombre:</label>
+          <input class="form-control item" type="text" name="Nombre" maxlength="15" minlength="4"
+            pattern="^[a-zA-Z0-9_.-]*$" id="username" required>
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Apellido:</label>
+          <input class="form-control item" type="text" name="Apellido" maxlength="15" minlength="4"
+            pattern="^[a-zA-Z0-9_.-]*$" id="username" required>
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Correo electrónico:</label>
+          <input class="form-control item" type="email" name="email" id="email" placeholder="abc@123.com" required>
+        </div>
         <div class="form-group">
           <label for="exampleFormControlSelect2">País</label>
           <select class="form-control">
@@ -137,12 +143,12 @@
         </div>
         <div class="form-group">
           <label for="exampleFormControlTextarea1">Comentarios</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <textarea class="form-control" name="Comentarios" id="exampleFormControlTextarea1" rows="3" required></textarea>
+        </div>
+        <div class="form-group">
+          <button class="btn btn-primary btn-block create-account" type="submit">Enviar comentarios</button>
         </div>
       </form>
-      <div class="col-1 mx-auto">
-        <button type="submit" class="btn btn-primary">Enviar</button>
-      </div>
     </div>
   </div>
 </main>
@@ -173,12 +179,12 @@
       <div class="col-md-3 mx-auto">
         <form>
           <p>Suscribite a mi newsletter!</p>
-          <div class="d-flex w-100 gap-2">
-            <label for="newsletter1" class="visually-hidden">Email</label>
-            <input id="newsletter1" type="text" class="form-control" placeholder="Email">
-            <button class="btn btn-primary" type="button">Suscribir</button>
+          <div class="d-flex w-100 gap-2 form-group">
+            <input class="form-control item" type="email" name="email" id="email" placeholder="abc@123.com" required>
+            <button class="btn btn-primary btn-block create-account" type="submit">Suscribir</button>
           </div>
-        </form>
+      </div>
+      </form>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
