--- a/pages/receta-bloquecitos-de-chocolate.html
+++ b/pages/receta-bloquecitos-de-chocolate.html
@@ -229,12 +229,12 @@
         <div class="col-md-3 mx-auto">
           <form>
             <p>Suscribite a mi newsletter!</p>
-            <div class="d-flex w-100 gap-2">
-              <label for="newsletter1" class="visually-hidden">Email</label>
-              <input id="newsletter1" type="text" class="form-control" placeholder="Email">
-              <button class="btn btn-primary" type="button">Suscribir</button>
+            <div class="d-flex w-100 gap-2 form-group">
+              <input class="form-control item" type="email" name="email" id="email" placeholder="abc@123.com" required>
+              <button class="btn btn-primary btn-block create-account" type="submit">Suscribir</button>
             </div>
-          </form>
+        </div>
+        </form>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
           integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
