--- a/pages/receta-torta-de-naranja.html
+++ b/pages/receta-torta-de-naranja.html
@@ -128,40 +128,41 @@
         queso crema, o la típica tarta de ricotta) y queda increíble! Es muy muuuy rica, suave, tierna y con mucho sabor
         a naranja, cosa que me encanta! Todo lo que sea cítrico me llama la atención, y los dulces con naranja, limón o
         lima, son mi perdición!</p>
-        <p>Entonces me puse a buscar recetas con ricotta y se me ocurrió que podía hacer algún tipo de torta o budín. Me
+      <p>Entonces me puse a buscar recetas con ricotta y se me ocurrió que podía hacer algún tipo de torta o budín. Me
         encontré con una receta de budín de ricotta (pero era con limón en vez de naranja) y tuve que probarla. De pinta
         DIVINA, pero cuando la corte: un horror! toda apelmazada y apretada la masa y parecía cruda. No me consolé y la
         hice OTRA VEZ, pensando que tal vez había sido el horno de mi casa que no hornea bien jeje. Pero nuevamente lo
         mismo: torta arruinada. Ahí me di cuenta que LA RECETA no era buena (deduje que llevaba mucha manteca y mucha
         ricotta) y me puse a buscar otra receta similar… no me iba a rendir TAN fácilmente ¿no? *</p>
 
-        <p>Así que encontré esta receta DELICIOSA (que también era con limón pero yo la convertí a naranja) y me fascinó.
+      <p>Así que encontré esta receta DELICIOSA (que también era con limón pero yo la convertí a naranja) y me fascinó.
         La textura, el sabor, la costra crocante y dorada, todo es perfecto! Así que recomiendo muchísimo esta receta
         tan fácil y rica y original! Pueden hacerla de naranja, como yo, o bien de limón como era la receta original o
         de cualquier otro cítrico que les guste.</p>
 
-        <p class="italic-text">*Moraleja: si hacen una receta que no les sale bien, no siempre es porque Uds hicieron algo mal, sino porque la
+      <p class="italic-text">*Moraleja: si hacen una receta que no les sale bien, no siempre es porque Uds hicieron algo
+        mal, sino porque la
         receta misma puede ser mala! Tienen que probar siempre, sobre todo recetas sacadas de internet que muchas veces
         son poco confiables!
       </p>
       <p class="font-weight-bold underline"> Ingredientes:
 
-      <li>150 gs manteca a temperatura ambiente</li>
-      <li>1 1/2 taza de harina</li>
-      <li>2 cucharaditas de polvo de hornear</li>
-      <li>1 1/2 taza (360 gs) ricotta SUAVE y a temp ambiente</li>
-      <li>pizca de sal</li>
-      <li>3 huevos</li>
-      <li>1 cucharadita de vainilla</li>
-      <li>1 1/2 taza azúcar</li>
-      <li>1 1/2 taza azúcar</li>
-      <li>Ralladura de 2 naranjas</li>
-      <li>2 cucharadas de jugo de naranja</li>
-    </p>
+        <li>150 gs manteca a temperatura ambiente</li>
+        <li>1 1/2 taza de harina</li>
+        <li>2 cucharaditas de polvo de hornear</li>
+        <li>1 1/2 taza (360 gs) ricotta SUAVE y a temp ambiente</li>
+        <li>pizca de sal</li>
+        <li>3 huevos</li>
+        <li>1 cucharadita de vainilla</li>
+        <li>1 1/2 taza azúcar</li>
+        <li>1 1/2 taza azúcar</li>
+        <li>Ralladura de 2 naranjas</li>
+        <li>2 cucharadas de jugo de naranja</li>
+      </p>
       <p class="font-weight-bold"> Para glasé:</p>
       <li>2 tazas de azúcar impalpable</li>
       <li>2 cucharadas de jugo de naranja</li>
-    </p>
+      </p>
       <p class="font-weight-bold underline"> Procedimiento:</p>
       <li>Precalentar horno a 170C.
         Enmantecar y enharinar una tortera mediana o bien una budinera (grandecita).
@@ -209,28 +210,28 @@
         <div class="col-md-3 mx-auto">
           <form>
             <p>Suscribite a mi newsletter!</p>
-            <div class="d-flex w-100 gap-2">
-              <label for="newsletter1" class="visually-hidden">Email</label>
-              <input id="newsletter1" type="text" class="form-control" placeholder="Email">
-              <button class="btn btn-primary" type="button">Suscribir</button>
+            <div class="d-flex w-100 gap-2 form-group">
+              <input class="form-control item" type="email" name="email" id="email" placeholder="abc@123.com" required>
+              <button class="btn btn-primary btn-block create-account" type="submit">Suscribir</button>
             </div>
-          </form>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-          integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-          crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-          integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-          crossorigin="anonymous"></script>
-        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script type='text/javascript'></script>
-        <script type='text/javascript'
-          src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
-        <script type='text/javascript'
-          src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
+        </form>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+      <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+      <script type='text/javascript'></script>
+      <script type='text/javascript'
+        src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
+      <script type='text/javascript'
+        src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
 </body>
 
 </html>
