--- a/index.html
+++ b/index.html
@@ -117,19 +117,20 @@
   </header>
   <section class="section">
     <p class="section--welcome"> ¡Bienvenidos!</p>
-<div class="center">
-    <p> En Las Delicias de Noe encontrarás el arte que es para mí la gastronomía.
-      Recetas tanto dulces como saladas, ideas de postres sencillos o más elaborados, platos que hemos visto siempre
-      en casa, o los clásicos totalmente renovados.
-    </p>
-    <p> Porque la cocina no deja de ser un juego. Un juego que nos hace disfrutar tanto en su elaboración como después
-      cuando nos sentamos a la mesa para compartir momentos únicos.
-    </p>
-    <p> Ya lo sabemos todos, alrededor de una mesa es donde se toman las mejores decisiones. Donde nos reunimos,
-      discutimos, reímos, y nos emocionamos. Y porque a través de la comida transmitimos nuestro cariño, nuestro amor… Y
-      mucha felicidad.
-    </p>
-  </div>
+    <div class="center">
+      <p> En Las Delicias de Noe encontrarás el arte que es para mí la gastronomía.
+        Recetas tanto dulces como saladas, ideas de postres sencillos o más elaborados, platos que hemos visto siempre
+        en casa, o los clásicos totalmente renovados.
+      </p>
+      <p> Porque la cocina no deja de ser un juego. Un juego que nos hace disfrutar tanto en su elaboración como después
+        cuando nos sentamos a la mesa para compartir momentos únicos.
+      </p>
+      <p> Ya lo sabemos todos, alrededor de una mesa es donde se toman las mejores decisiones. Donde nos reunimos,
+        discutimos, reímos, y nos emocionamos. Y porque a través de la comida transmitimos nuestro cariño, nuestro amor…
+        Y
+        mucha felicidad.
+      </p>
+    </div>
   </section>
   <p class="section--subtitle">¿Qué recetas estás buscando? </p>
   </section>
@@ -197,7 +198,7 @@
                           alt="Receta de paletas heladas de cheesecake de frutillas">
                       </a>
                       <div class="card-body">
-                        <h4 class="card-title">Paletas heladas de cheesecake de frutillas</h4>
+                        <h4 class="card-title">Paletas heladas de cheesecake</h4>
                       </div>
                     </div>
                   </div>
@@ -258,28 +259,28 @@
         <div class="col-md-3 mx-auto">
           <form>
             <p>Suscribite a mi newsletter!</p>
-            <div class="d-flex w-100 gap-2">
-              <label for="newsletter1" class="visually-hidden">Email</label>
-              <input id="newsletter1" type="text" class="form-control" placeholder="Email">
-              <button class="btn btn-primary" type="button">Suscribir</button>
+            <div class="d-flex w-100 gap-2 form-group">
+              <input class="form-control item" type="email" name="email" id="email" placeholder="abc@123.com" required>
+              <button class="btn btn-primary btn-block create-account" type="submit">Suscribir</button>
             </div>
-          </form>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-          integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-          crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-          integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-          crossorigin="anonymous"></script>
-        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script type='text/javascript'></script>
-        <script type='text/javascript'
-          src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
-        <script type='text/javascript'
-          src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
+        </form>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+      <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+      <script type='text/javascript'></script>
+      <script type='text/javascript'
+        src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
+      <script type='text/javascript'
+        src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
 </body>
 
 </html>
