--- a/pages/receta-panqueques-vegetales.html
+++ b/pages/receta-panqueques-vegetales.html
@@ -126,22 +126,23 @@
     <div class="center">
       <p>Estos panquequitos fáciles de vegetales surgen de la NECESIDAD!</p>
 
-        <p>Necesidad de pensar en comidas ideales para que los niños lleven al cole, en esta «nueva normalidad» y que no
+      <p>Necesidad de pensar en comidas ideales para que los niños lleven al cole, en esta «nueva normalidad» y que no
         tengan que calentar, ya que (por lo menos en el cole de mis hijas) no pueden calentar su comida como hacían pre
         COVID.</p>
 
-        <p> Uyyy que difícil se está haciendo pensar en opciones rápidas, sanas y salvadoras para todos los días! Porque
-        todo bien con las empanadas y los sándwiches y la tarta de jamón y queso, pero pobres niños! Siempre lo mismo!</p>
+      <p> Uyyy que difícil se está haciendo pensar en opciones rápidas, sanas y salvadoras para todos los días! Porque
+        todo bien con las empanadas y los sándwiches y la tarta de jamón y queso, pero pobres niños! Siempre lo mismo!
+      </p>
 
-        <p>Así que buscando ideas justamente para eso, me encontré con estos panquequitos de vegetales y ricotta que son
+      <p>Así que buscando ideas justamente para eso, me encontré con estos panquequitos de vegetales y ricotta que son
         perfectos! Se hacen en minutos, pueden usar los vegetales que quieran o tengan en su heladera (o que les guste a
         sus hijos), unos minutos a la plancha y listo! panquequitos prontos.</p>
 
-        <p>Claro que no sólo tienen que ser para niños! Pueden ser perfectos para una picada de adultos, en formato
+      <p>Claro que no sólo tienen que ser para niños! Pueden ser perfectos para una picada de adultos, en formato
         «tortilla» más grande, como acompañamiento a alguna carne; y les pueden agregar condimentos como curry, comino,
         pimentón ahumado, o lo que más les guste. La verdad es que todo queda bien con ellos!</p>
 
-        <p>Les dejo la receta y ya saben, pueden sustituir los vegetales por los que quieran!</p>
+      <p>Les dejo la receta y ya saben, pueden sustituir los vegetales por los que quieran!</p>
       </p>
       <p class="font-weight-bold underline"> Ingredientes:</p>
       <ol>
@@ -207,28 +208,28 @@
         <div class="col-md-3 mx-auto">
           <form>
             <p>Suscribite a mi newsletter!</p>
-            <div class="d-flex w-100 gap-2">
-              <label for="newsletter1" class="visually-hidden">Email</label>
-              <input id="newsletter1" type="text" class="form-control" placeholder="Email">
-              <button class="btn btn-primary" type="button">Suscribir</button>
+            <div class="d-flex w-100 gap-2 form-group">
+              <input class="form-control item" type="email" name="email" id="email" placeholder="abc@123.com" required>
+              <button class="btn btn-primary btn-block create-account" type="submit">Suscribir</button>
             </div>
-          </form>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-          integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-          crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-          integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-          crossorigin="anonymous"></script>
-        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script type='text/javascript'></script>
-        <script type='text/javascript'
-          src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
-        <script type='text/javascript'
-          src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
+        </form>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+      <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+      <script type='text/javascript'></script>
+      <script type='text/javascript'
+        src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
+      <script type='text/javascript'
+        src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
 </body>
 
 </html>
