--- a/pages/signup.html
+++ b/pages/signup.html
@@ -113,40 +113,36 @@
   <main>
     <p class="section--subtitle">Registrar usuario</p>
 
-    <div class="center">
-    <div>
-      <form class="col-sm-12 bigForm">
-              <div class=" form-group">
-        <label for="exampleFormControlInput1">Nombre:</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1">
-        <label for="exampleFormControlInput1">Apellido:</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1">
-        <label for="exampleFormControlInput1">Correo electrónico:</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="abc@123.com">
-        <label for="exampleFormControlInput1">Contraseña:</label>
-        <input type="password" class="form-control" id="exampleFormControlInput1">
-        <label for="exampleFormControlInput1">Repetir contraseña:</label>
-        <input type="password" class="form-control" id="exampleFormControlInput1">
-
-    </div>
-
-    <div class="form-group">
-      <label for="exampleFormControlSelect2">País</label>
-      <select class="form-control">
-        <option>Uruguay</option>
-        <option>Argentina</option>
-        <option>Brasil</option>
-        <option>Chile</option>
-      </select>
-    </div>
-
-    </form>
-    <div class="col-1 mx-auto">
-      <button type="submit" class="btn btn-primary">Enviar</button>
+    <div class="registration-form center">
+      <form>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Nombre:</label>
+          <input class="form-control item" type="text" name="username" maxlength="15" minlength="4"
+            pattern="^[a-zA-Z0-9_.-]*$" id="username" required>
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Apellido:</label>
+          <input class="form-control item" type="text" name="username" maxlength="15" minlength="4"
+            pattern="^[a-zA-Z0-9_.-]*$" id="username" required>
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Correo electrónico:</label>
+          <input class="form-control item" type="email" name="email" id="email" placeholder="abc@123.com" required>
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Contraseña:</label>
+          <input class="form-control item" type="password" name="password" minlength="6" id="password" required>
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlInput1"> Repetir contraseña:</label>
+          <input class="form-control item" type="password" name="password" minlength="6" id="password" required>
+        </div>
+        <div class="form-group">
+          <button class="btn btn-primary btn-block create-account" type="submit">Crear cuenta</button>
+        </div>
+      </form>
     </div>
     </div>
-    </div>
-  </div>
   </main>
   <div class="container-fluid">
     <footer class="py-1 footer footer--grad">
@@ -175,28 +171,28 @@
         <div class="col-md-3 mx-auto">
           <form>
             <p>Suscribite a mi newsletter!</p>
-            <div class="d-flex w-100 gap-2">
-              <label for="newsletter1" class="visually-hidden">Email</label>
-              <input id="newsletter1" type="text" class="form-control" placeholder="Email">
-              <button class="btn btn-primary" type="button">Suscribir</button>
+            <div class="d-flex w-100 gap-2 form-group">
+              <input class="form-control item" type="email" name="email" id="email" placeholder="abc@123.com" required>
+              <button class="btn btn-primary btn-block create-account" type="submit">Suscribir</button>
             </div>
-          </form>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-          integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-          crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-          integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-          crossorigin="anonymous"></script>
-        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script type='text/javascript'></script>
-        <script type='text/javascript'
-          src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
-        <script type='text/javascript'
-          src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
+        </form>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+      <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+      <script type='text/javascript'></script>
+      <script type='text/javascript'
+        src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
+      <script type='text/javascript'
+        src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
 </body>
 
 </html>
