--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -117,6 +117,7 @@
   <main class="my-5">
     <div class="container">
       <!--Section: Content-->
+      <form method="POST" action="mailto:mnsu1710@gmail.com" enctype="text/plain">
       <section class="text-center">
         <div class="row">
 
@@ -132,7 +133,7 @@
                 <p class="card-text">
                   $1500
                 </p>
-                <button class="btn btn-primary--buy" type="button">Comprar</button>
+                <button class="btn btn-primary--buy" type="button submit">Comprar</button>
               </div>
             </div>
           </div>
@@ -140,16 +141,14 @@
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                <img class="img-fluid"
-                  src="../img/libro.jpg"
-                  alt="libro" height="400" " />
+                <img class="img-fluid" src="../img/libro.jpg" alt="libro" height="400" " />
                     </div>
                     <div class=" card-body">
                 <h5 class="card-title">Mi libro de recetas</h5>
                 <p class="card-text">
                   $1100
                 </p>
-                <button class="btn btn-primary--buy" type="button">Comprar</button>
+                <button class="btn btn-primary--buy" type="button submit">Comprar</button>
               </div>
             </div>
           </div>
@@ -157,21 +156,18 @@
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                <img class="img-fluid"
-                  src="../img/curso.jpg"
-                  alt="saludable" height="400" " />
+                <img class="img-fluid" src="../img/curso.jpg" alt="saludable" height="400" " />
                     </div>
                     <div class=" card-body">
                 <h5 class="card-title">Curso online de comida saludable</h5>
                 <p class="card-text">
                   $1300
                 </p>
-                <button class="btn btn-primary--buy" type="button">Comprar</button>
+                <button class="btn btn-primary--buy" type="button submit">Comprar</button>
               </div>
             </div>
           </div>
-        
-        
+        </form>
         </div>
     </div>
     </section>
@@ -204,28 +200,28 @@
         <div class="col-md-3 mx-auto">
           <form>
             <p>Suscribite a mi newsletter!</p>
-            <div class="d-flex w-100 gap-2">
-              <label for="newsletter1" class="visually-hidden">Email</label>
-              <input id="newsletter1" type="text" class="form-control" placeholder="Email">
-              <button class="btn btn-primary" type="button">Suscribir</button>
+            <div class="d-flex w-100 gap-2 form-group">
+              <input class="form-control item" type="email" name="email" id="email" placeholder="abc@123.com" required>
+              <button class="btn btn-primary btn-block create-account" type="submit">Suscribir</button>
             </div>
-          </form>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-          integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-          crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-          integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-          crossorigin="anonymous"></script>
-        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <script type='text/javascript'></script>
-        <script type='text/javascript'
-          src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
-        <script type='text/javascript'
-          src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
+        </form>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+      <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+      <script type='text/javascript'></script>
+      <script type='text/javascript'
+        src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
+      <script type='text/javascript'
+        src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
 </body>
 
 </html>
