--- a/pages/rececetas-dulces.html
+++ b/pages/rececetas-dulces.html
@@ -182,8 +182,7 @@
                 <h5 class="card-title">Brownies Red Velvet</h5>
                 <p class="card-text">
                   ¿Alguna vez escucharon hablar de BROWNIES RED VELVET? No se si saben, pero soy fanática de todos los
-                  brownies del universo. Toda preparación que tenga la palabra «brownie» incluida, me llama la atención
-                  y me dan ganas de probarla...
+                  brownies del universo. Toda preparación que tenga la palabra «brownie» incluida...
                 </p>
                 <a href="./receta-brownie-red-velvet.html" class="btn btn-primary">Ver receta</a>
               </div>
