--- a/pages/receta-torta-de-naranja.html
+++ b/pages/receta-torta-de-naranja.html
@@ -188,13 +188,13 @@
       <div class="row ">
         <div class="col-md-2 mx-auto">
           <ul class="nav flex-row">
-            <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="Twitter">
+            <li class="ms-3"><a class="link-light" href="https://www.twitter.com"><svg class="bi" width="24" height="24" alt="Twitter">
                   <use xlink:href="#twitter" />
                 </svg></a></li>
-            <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="Instagram">
+            <li class="ms-3"><a class="link-light" href="https://www.instagram.com"><svg class="bi" width="24" height="24" alt="Instagram">
                   <use xlink:href="#instagram" />
                 </svg></a></li>
-            <li class="ms-3"><a class="link-light" href="#"><svg class="bi" width="24" height="24" alt="Facebook">
+            <li class="ms-3"><a class="link-light" href="https://www.facebook.com"><svg class="bi" width="24" height="24" alt="Facebook">
                   <use xlink:href="#facebook" />
                 </svg></a></li>
           </ul>
