--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
             </li>
           </ul>
-          <img src="img/cartWhite.png" alt="carrito" height="32">
+          <a href="./pages/carrito.html""><img src="img/cartWhite.png" alt="carrito" height="32"/></a>
           <button type="button" class="btn menuIcons" data-bs-toggle="modal" data-bs-target="#modalForm"><img
             src="img/loginWhite.png" alt="login" height="32">
         </button>
@@ -134,7 +134,7 @@
       </p>
     </div>
   </section>
-  <p class="section--subtitle">¿Qué recetas estás buscando? </p>
+  <p class="section--subtitle">¿Qué receta estás buscando? </p>
   </section>
   <section class="pt-5 pb-5 lato">
     <div class="container">
