--- a/pages/receta-bloquecitos-de-chocolate.html
+++ b/pages/receta-bloquecitos-de-chocolate.html
@@ -71,7 +71,7 @@
               <a class="nav-link" href="./contacto.html">CONTACTO</a>
             </li>
           </ul>
-          <img src="../img/cartWhite.png" alt="carrito" height="32">
+          <a href="./carrito.html""><img src="../img/cartWhite.png" alt="carrito" height="32"/></a>
           <button type="button" class="btn menuIcons" data-bs-toggle="modal" data-bs-target="#modalForm"><img
             src="../img/loginWhite.png" alt="login" height="32">
         </button>
