--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -73,7 +73,7 @@
               <a class="nav-link" href="./contacto.html">CONTACTO</a>
             </li>
           </ul>
-          <img src="../img/cartWhite.png" alt="carrito" height="32">
+          <a href="./carrito.html""><img src="../img/cartWhite.png" alt="carrito" height="32"/></a>
           <button type="button" class="btn menuIcons" data-bs-toggle="modal" data-bs-target="#modalForm"><img
             src="../img/loginWhite.png" alt="login" height="32">
         </button>
@@ -135,7 +135,7 @@
                 <p class="card-text">
                   $1500
                 </p>
-                <button class="btn btn-primary--buy" type="button submit">Comprar</button>
+                <a class="btn btn-primary--buy" href="./carrito.html">Comprar</a>
               </div>
             </div>
           </div>
@@ -150,7 +150,7 @@
                 <p class="card-text">
                   $1100
                 </p>
-                <button class="btn btn-primary--buy" type="button submit">Comprar</button>
+                <a class="btn btn-primary--buy" href="./carrito.html">Comprar</a>
               </div>
             </div>
           </div>
@@ -165,7 +165,7 @@
                 <p class="card-text">
                   $1300
                 </p>
-                <button class="btn btn-primary--buy" type="button submit">Comprar</button>
+                <a class="btn btn-primary--buy" href="./carrito.html">Comprar</a>
               </div>
             </div>
           </div>
