--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="comida, recetas, blog recetas">
   <meta name="description" content="Sitio de recetas y tienda de María Noel Silvera">
-  <title>Las delicias de Noe - Contacto</title>
+  <title>Las delicias de Noe - Carrito</title>
   <link rel="icon" href="../img/wedding-cake.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/destino.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -70,7 +71,7 @@
             <a class="nav-link" href="./contacto.html">CONTACTO</a>
           </li>
         </ul>
-        <a href="./carrito.html"><img src="../img/cartWhite.png" alt="carrito" height="32"/></a>
+        <a href="./carrito.html""><img src="../img/cartWhite.png" alt="carrito" height="32"/></a>
         <button type="button" class="btn menuIcons" data-bs-toggle="modal" data-bs-target="#modalForm"><img
           src="../img/loginWhite.png" alt="login" height="32">
       </button>
@@ -111,47 +112,108 @@
     </div>
   </nav>
 </header>
-<main class="container-fluid">
-  <div class="center">
-    <p class="section--subtitle">Contacto </p>
-    <p> Hola, soy Noe! Te invito a que me dejes tus comentarios, consultas o inquietudes que será un gusto
-      responderte.</p>
-    <div>
+<main class="page">
+  <section class="shopping-cart dark">
+    <div class="container">
+         <div class="block-heading">
+          <p class="section--subtitle">Mi Carrito</p>
+         </div>
+         <div class="content">
+        <div class="row">
+          <div class="col-md-12 col-lg-8">
+            <div class="items">
+              <div class="product">
+                <div class="row">
+                  <div class="col-md-3">
+                    <img class="img-fluid mx-auto d-block image roundCorners" src="https://www.vegea.com/Dos-Imgs/support-livre-de-cuisine-et-couteaux-publicitaire-personnalisable-0404775.jpg">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="info">
+                      <div class="row">
+                        <div class="col-md-5 product-name">
+                          <div class="product-name">
 
-      <form method="POST" action="mailto:mnsu1710@gmail.com" enctype="text/plain">
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Nombre:</label>
-          <input class="form-control item" type="text" name="Nombre" maxlength="15" minlength="4"
-            pattern="^[a-zA-Z0-9_.-]*$" id="username" required>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Apellido:</label>
-          <input class="form-control item" type="text" name="Apellido" maxlength="15" minlength="4"
-            pattern="^[a-zA-Z0-9_.-]*$" id="username" required>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Correo electrónico:</label>
-          <input class="form-control item" type="email" name="email" id="email" placeholder="abc@123.com" required>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlSelect2">País</label>
-          <select class="form-control">
-            <option>Uruguay</option>
-            <option>Argentina</option>
-            <option>Brasil</option>
-            <option>Chile</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="exampleFormControlTextarea1">Comentarios</label>
-          <textarea class="form-control" name="Comentarios" id="exampleFormControlTextarea1" rows="3" required></textarea>
-        </div>
-        <div class="form-group">
-          <button class="btn btn-primary btn-block create-account" type="submit">Enviar comentarios</button>
-        </div>
-      </form>
+                            <h5 class="card-title" href="#">Portalibros y juego de cuchillos</h5>
+                          </div>
+                        </div>
+                        <div class="col-md-4 quantity">
+                          <label for="quantity">Cantidad:</label>
+                          <input id="quantity" type="number" value ="1" class="form-control quantity-input">
+                        </div>
+                        <div class="col-md-3 price">
+                          <span>$1500</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="product">
+                <div class="row">
+                  <div class="col-md-3">
+                    <img class="img-fluid mx-auto d-block image roundCorners" src="../img/libro.jpg">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="info">
+                      <div class="row">
+                        <div class="col-md-5 product-name">
+                          <div class="product-name">
+                            <h5 class="card-title" href="#">Libro de recetas</h5>
+                          </div>
+                        </div>
+                        <div class="col-md-4 quantity">
+                          <label for="quantity">Cantidad:</label>
+                          <input id="quantity" type="number" value ="1" class="form-control quantity-input">
+                        </div>
+                        <div class="col-md-3 price">
+                          <span>$1100</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="product">
+                <div class="row">
+                  <div class="col-md-3">
+                    <img class="img-fluid mx-auto d-block image roundCorners" src="../img/curso.jpg">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="info">
+                      <div class="row">
+                        <div class="col-md-5 product-name">
+                          <div class="product-name">
+                            <h5 class="card-title" href="#">Curso online de comida saludable</h5>
+                          </div>
+                        </div>
+                        <div class="col-md-4 quantity">
+                          <label for="quantity">Cantidad:</label>
+                          <input id="quantity" type="number" value ="1" class="form-control quantity-input">
+                        </div>
+                        <div class="col-md-3 price">
+                          <span>$1300</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12 col-lg-4">
+            <div class="summary">
+              <h3>Detalle del pedido</h3>
+              <div class="summary-item"><span class="text">Subtotal</span><span class="price">$3900</span></div>
+              <div class="summary-item"><span class="text">Descuentos</span><span class="price">$0</span></div>
+              <div class="summary-item"><span class="text">Envío</span><span class="price">$150</span></div>
+              <div class="summary-item"><span class="text">Total</span><span class="price">$4050</span></div>
+              <button type="button" class="btn btn-primary btn-lg btn-block">Continuar</button>
+            </div>
+          </div>
+        </div> 
+      </div>
     </div>
-  </div>
+ </section>
 </main>
 <div class="container-fluid">
   <footer class="py- footer footer--grad">
@@ -195,6 +257,8 @@
         src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js'></script>
       <script type='text/javascript'
         src='https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
       </body>
 
 </html>
