Cambio de ícono carrito y mejoras en hamburguer menu

--- a/index.html
+++ b/index.html
@@ -233,6 +233,59 @@
     </div>
   </section>
 
+  <section class="pt-5 pb-5 lato">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <h3 class="mb-3">Tienda </h3>
+        </div>
+        <div class="col-6 text-right">
+        </div>
+        <div class="col-12">
+          <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row">
+
+                  <div class="col-md-4 mb-3">
+                    <div class="card">
+                      <a href="./pages/tienda.html">
+                        <img class="img-fluid" src="https://www.vegea.com/Dos-Imgs/support-livre-de-cuisine-et-couteaux-publicitaire-personnalisable-0404775.jpg" alt="portalibros">
+                      </a>
+                      <div class="card-body">
+                        <h4 class="card-title card-title--size">Portalibros y juego de cuchillos</h4>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4 mb-3">
+                    <div class="card">
+                      <a href="./pages/tienda.html">
+                        <img class="img-fluid" src="img/libro.jpg" alt="libro">
+                      </a>
+                      <div class="card-body">
+                        <h4 class="card-title card-title--size">Mi libro de recetas</h4>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4 mb-3">
+                    <div class="card">
+                      <a href="./pages/tienda.html">
+                        <img class="img-fluid" src="img/curso.jpg" alt="saludable">
+                      </a>
+                      <div class="card-body">
+                        <h4 class="card-title card-title--size">Curso onlilne de comida saludable</h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <div class="container-fluid">
     <footer class="py- footer footer--grad">
       <div class="row">
