--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@
       </div>
     </nav>
   </header>
-  <section class="section">
-    <p class="section--welcome"> ¡Bienvenidos!</p>
+  <main>
+  <section class="section welcome">
+    <p class="section--subtitle"> ¡Bienvenidos!</p>
     <div class="center">
       <p> En Las Delicias de Noe encontrarás el arte que es para mí la gastronomía.
         Recetas tanto dulces como saladas, ideas de postres sencillos o más elaborados, platos que hemos visto siempre
@@ -285,6 +286,7 @@
       </div>
     </div>
   </section>
+</main>
 
   <div class="container-fluid">
     <footer class="py- footer footer--grad">
